2014-06-14  Paul J. Lucas <paul@lucasmail.org>

    * configure.ac: Upped version to 3.0.1.

    * long_line-03.txt Makefile.am wrap-long_line-03.test wrap-long_line-03.txt
      wrap-long_line-04.test wrap-long_line-04.txt: New long-line test.

    * README.md: New README file for test format.

    * wrap.c: Fixed long-line bug.

    * wrap.c: Can now handle arbitrarily long lines.

2014-06-12  Paul J. Lucas <paul@lucasmail.org>

    * long_line-01.txt long_line-02.txt Makefile.am wrap-long_line-01.test
      wrap-long_line-01.txt wrap-long_line-02.test wrap-long_line-02.txt: New
      tests.

2014-06-11  Paul J. Lucas <paul@lucasmail.org>

    * wrap.1: Fixed -W by adding .TP.

2014-05-26  Paul J. Lucas <paul@lucasmail.org>

    * README.md: Added for github.

2014-05-19  Paul J. Lucas <paul@lucasmail.org>

    * devclean: Added this script.

    * Makefile.am: Added "Added AUTOMAKE_OPTIONS = 1.12."

    * run_test.sh: No longer using arrays since Bourne shell doesn't have them.

    * run_test.sh: Now explicitly setting PATH to get correct wrap/wrapc.

2014-01-18  Paul J. Lucas <paul@lucasmail.org>

    * wrap.1, wrap.c: Changed -b to -W.

2013-11-17  Paul J. Lucas <paul@lucasmail.org>

    * wrapc.c: Fixed short-line bug.

2013-11-09  Paul J. Lucas <paul@lucasmail.org>

    * Makefile.am, Makefile.in, aclocal.m4, ax_append_flag.m4,
      ax_cflags_warn_all.m4, ax_check_compile_flag.m4, configure.ac, m4: Added
      checking of extra C compiler warning flags.

    * wrap.1, wrap.c, wrapc.1, wrapc.c: Changed "length" to "width" and -l to
      -w.

    * run_tests.sh: Now doing PASS/FAIL.

    * Makefile: Added automake-required targets.

2013-11-06  Paul J. Lucas <paul@lucasmail.org>

    * wrap.1, wrapc.1: Now using .TP.

    * wrapc.1: Added BUGS.

    * wrapc.1: Put SEE ALSO last.

    * wrapc.1: Added mention of wrapc(5).

    * wrapc.1: s/wrap/wrap(1)/

    * wrap.1: Explained what white-space is.
